translate 01_07_lead_mine_shafts category

--- a/Belarusian.lang
+++ b/Belarusian.lang
@@ -636,32 +636,33 @@
     <Entry Name="DescOfficerCap">It's singed, and the officer's insignia has begun to melt into the material. Unless that insignia's made from play dough, the heat needed to melt it should have incinerated the entire cap.</Entry>
   </CATEGORY>
   <CATEGORY Name="01_07_lead_mine_shafts">
-    <Entry Name="DescFusebox">It says '50 amp fuses', but the box is empty. Still, the contents can't be far away.</Entry>
-    <Entry Name="DescSpareFuse">Ah, there's a fuse. How to reach it?</Entry>
-    <Entry Name="EventPanelNoPower">Just like everything else down here, it's old, decaying, and not working.</Entry>
-    <Entry Name="DescWiredoor">The door's barricaded, but what happened to whoever blocked it from the other side?</Entry>
-    <Entry Name="DescGate01">Probably prevented access to the mine proper, out of working hours. Something like that won't open without power.</Entry>
-    <Entry Name="DescMachine01">It's a cement mixer, no reason why it wouldn't still be working.</Entry>
-    <Entry Name="DescStairs01">Could be a good hiding spot.</Entry>
-    <Entry Name="DescStairs02">It's a long way down from up there. I hope it's sturdier than it looks.</Entry>
-    <Entry Name="DescThing01">Lot's of these around.</Entry>
-    <Entry Name="DescThing02">Doesn't serve much purpose these days.</Entry>
-    <Entry Name="DescMap">Wow, this place is bigger than I thought... I feel like a rat caught in a maze. I just hope I have a longer life expectancy.</Entry>
-    <Entry Name="DescPowerCabin01">There'd have to be some kind of backup system for the electricity. I think this might be part of it.</Entry>
-    <Entry Name="DescPowerCables01">These days, a cable this thick could power a city block. It's cold, so there's likely no current.</Entry>
-    <Entry Name="DescPowerCables02">They're hot to the touch. Wiring insulation clearly wasn't top priority when these were installed. </Entry>
-    <Entry Name="DescShelfs01">Probably some type of protection from loose rocks.</Entry>
-    <Entry Name="DescShelfBook">Not much on this shelf, save for that manual.</Entry>
-    <Entry Name="DescShelfBackup">These spare radio parts don't look spare at all... they almost look like they've been put here recently.</Entry>
-    <Entry Name="DescVariousRadios">Comms equipment... can't be within signal range.</Entry>
-    <Entry Name="DescSingleRadio">That noise... for some reason, I really don't like it. I've got to get a grip.</Entry>
-    <Entry Name="DescContainers">They're all empty. This whole place is empty.</Entry>
-    <Entry Name="EventWormEnc01">The noises down here are so alien compared to the way sound travels on the surface. That rock fall almost sounded organic, like the rock screaming.</Entry>
-    <Entry Name="EventStorageLocked">Damn, I can't get this door to open.</Entry>
-    <Entry Name="EventMorseCodeStart">That beeping coming from the speakers... maybe there's someone out there after all.</Entry>
-    <Entry Name="EventRadioOver">What... the hell... is going on down here? God damn it, this radio's useless! Who was that?</Entry>
-    <Entry Name="DescGasCan">It's a propane gas canister. Highly pressurised.</Entry>
-    <Entry Name="DescRailings">From the look of it, this mine was built some time after the section I've just come from. They must have just forgotten about all the old equipment back there when they built this place.</Entry>
+    <Entry Name="DescFusebox">Тут напісана "Засцерагальнікі на 50А", але скрынка пустая. Аднак, змесціва не можа быць далёка.</Entry>
+    <Entry Name="DescSpareFuse">Ах, вось дзе засцерагальнік. Як яго дастаць?</Entry>
+    <Entry Name="EventPanelNoPower">Як і ўсё астатняе тут, старое, гнілое і не працуе.</Entry>
+    <Entry Name="DescWiredoor">Дзверы забарыкадаваныя, але што здарылася з тым, хто заблакаваў іх з іншага боку?</Entry>
+    <Entry Name="DescGate01">Верагодна, блакавалі доступ да галоўнай шахты ў непрацоўныя часы. Нешта падобнае не адкрыецца без сілкавання.</Entry>
+    <Entry Name="DescMachine01">Гэта бетонамяшалка, няма прычын, па якім яна б не працавала.</Entry>
+    <Entry Name="DescStairs01">Можа быць добрым сховішчам.</Entry>
+    <Entry Name="DescStairs02">Адтуль гэта далёка ўніз. Я спадзяваюся, што яно больш трывалае, чым здаецца.</Entry>
+    <Entry Name="DescThing01">Шмат такіх вакол.</Entry>
+    <Entry Name="DescThing02">У нашыя дні не мае асаблівай карысці.</Entry>
+    <Entry Name="DescMap">Нічога сабе, гэта месца больш вялікае, чым я думаў... Адчуваю сябе пацуком, які трапіў у лабірынт. Я проста спадзяваюся, што ў мяне будзе даўжэйшая працягласць жыцця.</Entry>
+    <Entry Name="DescPowerCabin01">Тут павінна быць нейкая рэзервовая сістэма для электрычнасці. Думаю, што гэта можа быць яе часткай.</Entry>
+    <Entry Name="DescPowerCables01">У нашыя дні кабелем такой таўшчыні можна падсілкаваць гарадскі квартал. Халодны, таму, верагодна, току няма.</Entry>
+    <Entry Name="DescPowerCables02">Яны гарачыя навобмацак. Ізаляцыя відавочна не была галоўным прыярытэтам пры іх усталяванні. </Entry>
+    <Entry Name="DescShelfs01">Верагодна, нейкі спосаб перасцярогі ад друзлых парод.</Entry>
+    <Entry Name="DescShelfBook">Не так шмат на гэтай паліцы, за выключэннем гэтага даведніка.</Entry>
+    <Entry Name="DescShelfBackup">Гэтыя запасныя часткі для радыё зусім не выглядаюць запаснымі... Іх як быццам нядаўна тут пакінулі.</Entry>
+    <Entry Name="DescVariousRadios">Камунікацыйнае абсталяванне... Не можа знаходзіцца ў межах дыяпазону сігналу.</Entry>
+    <Entry Name="DescSingleRadio">Гэты шум... Чамусьці ён мне вельмі не падабаецца. Трэба ўзяць сябе ў рукі.</Entry>
+    <Entry Name="DescContainers">Усе яны пустыя. Усё гэта месца пустое.
+</Entry>
+    <Entry Name="EventWormEnc01">Шумы тут такія чужародныя ў параўнанні з тым, як гук распаўсюджваецца на паверхні. Падзенне камення гучала амаль арганічна, як быццам яно крычыць.</Entry>
+    <Entry Name="EventStorageLocked">Халера, не магу адчыніць гэтыя дзверы.</Entry>
+    <Entry Name="EventMorseCodeStart">Гэтыя гудкі зыходзяць з дынамікаў... Магчыма, у выніку там нехта ёсць.</Entry>
+    <Entry Name="EventRadioOver">Што... Чорт бяры... Тут адбываецца? Магутны божа, гэта радыё бескарыснае! Хто гэта быў?</Entry>
+    <Entry Name="DescGasCan">Гэта балон з прапанам. Пад моцным ціскам.</Entry>
+    <Entry Name="DescRailings">На выгляд гэта шахта была пабудавана праз некаторы час пасля ўчастка, з якога я толькі што прыйшоў. Напэўна, яны проста забыліся пра ўсё старое абсталяванне, калі пабудавалі гэтае месца.</Entry>
   </CATEGORY>
   <CATEGORY Name="01_09_generator_room">
     <Entry Name="DescHole">The walls of this hole aren't as uniform as the rest of the shafts. But why dig it out by hand?</Entry>
