translate 01_09_generator_room category

--- a/Belarusian.lang
+++ b/Belarusian.lang
@@ -665,31 +665,31 @@
     <Entry Name="DescRailings">На выгляд гэта шахта была пабудавана праз некаторы час пасля ўчастка, з якога я толькі што прыйшоў. Напэўна, яны проста забыліся пра ўсё старое абсталяванне, калі пабудавалі гэтае месца.</Entry>
   </CATEGORY>
   <CATEGORY Name="01_09_generator_room">
-    <Entry Name="DescHole">The walls of this hole aren't as uniform as the rest of the shafts. But why dig it out by hand?</Entry>
-    <Entry Name="DescMachine">From the look of the thing, I'd guess this is the control panel for that generator.</Entry>
-    <Entry Name="DescLever">A lever. A less disciplined man than myself might be tempted to pull it just to find out what it does.</Entry>
-    <Entry Name="DescCrate">There's a battery symbol on the side, but it's welded tight shut. If they had some kind of machine for opening these, it's not here anymore.</Entry>
-    <Entry Name="DescValve">It's cold, and rusted. Rust might be the only thing that's survived down here all this time.</Entry>
-    <Entry Name="DescFence">I wonder how many accidents they had before this was put up. I shudder to think.</Entry>
-    <Entry Name="DescPrimary">Could be a letter 'I'...</Entry>
-    <Entry Name="DescSecondary">The symbol's worn out, but I should be able to work out what all this does.</Entry>
-    <Entry Name="DescGrease">Hmm... could be hydraulics... at any rate, it's some sort of fluid control.</Entry>
-    <Entry Name="DescPressure">I'm definitely at a loss on this one...</Entry>
-    <Entry Name="DescCooling">A symbol for water?</Entry>
-    <Entry Name="DescGenerator">This thing's huge. It must be about 3.5 mega watts, but it's pretty old. Certainly enough to light a few bulbs though.</Entry>
-    <Entry Name="DescBatteryArea">The starter motors on these old generators ran on batteries, like the one... that should be here.</Entry>
-    <Entry Name="DescFuseArea">These look like industrial fuses.</Entry>
-    <Entry Name="EventPlaceBattery">OK, battery in... startup motor functional... we should be set.</Entry>
-    <Entry Name="EventPlaceFuseNoBattery">Well, a spare might come in handy, but these fuses look A-1 to me.</Entry>
-    <Entry Name="EventPlaceFuse">We should finally be ready now. Provided this fuse holds out, that is.</Entry>
-    <Entry Name="EventLeverNoBattery">There... blind experimentation never achieves anything.</Entry>
-    <Entry Name="EventLeverWrongSettings">Either the air down here is getting to me, or I haven't read those instructions right.</Entry>
-    <Entry Name="DescFuseArea02">Yep, there's a blown fuse. Does nothing down here work?!</Entry>
-    <Entry Name="DescBrokenFuse">It's a pretty big fuse, but it's still broken.</Entry>
-    <Entry Name="EventBrokenFuseReplace">Putting the blown fuse back in isn't going to solve my problems.</Entry>
-    <Entry Name="DescBatteryArea02">That should have sparked the starter motor. I suppose it can't get by without a battery after all.</Entry>
-    <Entry Name="EventLeverFuseBlown">At this generator's age, it's a wonder it sparks at all. There's probably just been a power surge, I should check the fuse box.</Entry>
-    <Entry Name="DescGlass">Some kind of protective screen maybe. I wonder what it protected them from?</Entry>
+    <Entry Name="DescHole">Сцены гэтай дзіры не такія аднародныя, як астатняя частка шахта. Але навошта было капаць рукамі?</Entry>
+    <Entry Name="DescMachine">Мяркуючы па выгляду, гэта панэль кіравання гэтага генератара.</Entry>
+    <Entry Name="DescLever">Рычаг. У менш дысцыплінаванага чалавека чым я можа ўзнікнуць спакуса пацягнуць яго, каб даведацца, што ён робіць.</Entry>
+    <Entry Name="DescCrate">Збоку ёсць намаляваны акумулятар, але скрыня шчыльна заварана. Калі тут была нейкая машына для яе адкрыцця, яе ўжо няма.</Entry>
+    <Entry Name="DescValve">Халодны і іржавы. Іржа, здаецца, адзінае, што захавалася тут за ўвесь гэты час.</Entry>
+    <Entry Name="DescFence">Цікава, колькі няшчасных выпадкаў здарылася да таго, як гэта ўсталявалі. Страшна думаць.</Entry>
+    <Entry Name="DescPrimary">Магчыма, літара 'I'...</Entry>
+    <Entry Name="DescSecondary">Сімвал зношаны, але я павінен разабрацца як усё гэта працуе.</Entry>
+    <Entry Name="DescGrease">Хмм... Нейкая гідраўліка... У любым выпадку, гэта нейкі кантроль вадкасцю.</Entry>
+    <Entry Name="DescPressure">Нават не ўяўляю што гэта...</Entry>
+    <Entry Name="DescCooling">Сімвал вады?</Entry>
+    <Entry Name="DescGenerator">Ён велізарны. Павінны быць каля 3.5 МВт, але ён даволі стары. Аднак, выстачыць, каб запаліць некалькі лямпачак.</Entry>
+    <Entry Name="DescBatteryArea">Стартарныя рухавікі на гэтых старых генератарах працуюць на акумулятарах, такіх як той... Што павінны быць тут.</Entry>
+    <Entry Name="DescFuseArea">Выглядаюць як прамысловыя засцерагальнікі.</Entry>
+    <Entry Name="EventPlaceBattery">Добра, акумулятар у... Стартарным рухавіку працуе... Усё павінна быць гатова.</Entry>
+    <Entry Name="EventPlaceFuseNoBattery">Добра, запасны можа спатрэбіцца, але гэтыя засцерагальнікі выглядаюць як А-1.</Entry>
+    <Entry Name="EventPlaceFuse">Зараз усё павінна быць напагатове. Пры ўмове, што гэты засцерагальнік вытрымае.</Entry>
+    <Entry Name="EventLeverNoBattery">Вось... Сляпыя эксперыменты ні да чаго не прыводзяць.</Entry>
+    <Entry Name="EventLeverWrongSettings">Альбо мясцовае паветра ўплывае на мяне, альбо я не так прачытаў тыя інструкцыі.</Entry>
+    <Entry Name="DescFuseArea02">Ага, гэта згарэўшы засцерагальнік. Тут хоць нешта працуе?!</Entry>
+    <Entry Name="DescBrokenFuse">Даволі вялікі засцерагальнік, але ён усё адно зламаны.</Entry>
+    <Entry Name="EventBrokenFuseReplace">Мае праблемы не знікнуць, калі я засуну згарэўшы засцерагальнік назад.</Entry>
+    <Entry Name="DescBatteryArea02">Гэта павінна было запальваць стартар. Я мяркую, што яно ўсё ж не спрацуе без акумулятара.</Entry>
+    <Entry Name="EventLeverFuseBlown">Улічваючы старасць гэтага генератара, было б цудам, калі б ён запрацаваў. Верагодна, адбылося перанапружанне, мне варта праверыць размеркавальны шчыт.</Entry>
+    <Entry Name="DescGlass">Магчыма, нейкі ахоўны экран. Цікава, ад чаго ён іх ахоўваў?</Entry>
   </CATEGORY>
   <CATEGORY Name="01_10_small_shaft">
     <Entry Name="EventNoFuelNoKey">Well, power's on, but nothing else is on the cards.</Entry>
