translate Red 2 entries

--- a/Belarusian.lang
+++ b/Belarusian.lang
@@ -755,9 +755,9 @@
     <Entry Name="Red 1.02">Ну, я спадзяваюся, што вушы ў цябе працуюць лепш, чым язык, каб ты змог [br]паслухаць імі што я кажу.  Ты ўключыў святло ў канцы, пачатку [br]і сярэдзіне тунэлю, але некаторыя месцы застаюцца ахутанымі цемрай.</Entry>
     <Entry Name="Red 1.03">Я спадзяваюся, што маё паведамленне азбукай Морзэ дапамагло, але цяпер табе трэба [br]ў дзірку ў сцяне, справа ад плота.  Хутчэй!  Няма часу тлумачыць!</Entry>
     <Entry Name="Red 1.04">Ну, насамрэч, час - адна з нямногіх рэчаў, якіх ў нас тут шмат, але [br]сюрпрызы сапсуюцца праз такую каціную цікаўнасць.</Entry>
-    <Entry Name="Red 2.01">Ah, my memory is like something with a great many small holes.  We shall be needing to perform some minor demolition work, so that we might one day meet again.</Entry>
-    <Entry Name="Red 2.02">For this task, we shall require the use of a large, earth-eating, metal monster, and that monster is thirsty for juice from the place where things are kept.</Entry>
-    <Entry Name="Red 2.03">By the way, you can call me Red.  It is not my name, you understand, but, as I am sure you will agree, it is a name rather similar to a cardigan: fetching, when worn correctly.</Entry>
+    <Entry Name="Red 2.01">Ах, у маёй памяці як быццам шмат маленькіх дзірак.  Нам трэба будзе правесці невялікія работы па зносе, каб некалі мы маглі сустрэцца зноў.</Entry>
+    <Entry Name="Red 2.02">Для выканання гэтай задачы нам спатрэбіцца дапамога вялікага земляеднага металічнага монстра, і гэты монстр адчувае смагу да сокаў месца, у якім усё захоўваецца.</Entry>
+    <Entry Name="Red 2.03">Дарэчы, можаш зваць мяне Рэд.  Гэта не маё імя, як разумееш, але я ўпэўнены, ты пагодзішся, што гэтае імя даволі падобнае на кардыган: пасуе, калі насіць яго правільна.</Entry>
     <Entry Name="Red 3.01">Ah, those holes in my mind are increasingly gaping!  You cannot breach the inner sanctum of the place of storing, the entry way is blocked.  So the squishy material between my ears is squashier than most! </Entry>
     <Entry Name="Red 3.02">I may not be perfect like a hanging picture, but my words are wise, and backed up by time!  A pox! Try as I may, you must think that I deceive you with my - admittedly - cunning ways!  </Entry>
     <Entry Name="Red 3.03">As far as my eye has seen, our rocky grave extends, and yet you cast away my help like you would a puppy, freshly rolled in its own faeces!  I hope that your warped sense of morality is better company than I, because now, it is all that you have left!</Entry>
