translate 01_10_small_shaft category

--- a/Belarusian.lang
+++ b/Belarusian.lang
@@ -692,29 +692,29 @@
     <Entry Name="DescGlass">Магчыма, нейкі ахоўны экран. Цікава, ад чаго ён іх ахоўваў?</Entry>
   </CATEGORY>
   <CATEGORY Name="01_10_small_shaft">
-    <Entry Name="EventNoFuelNoKey">Well, power's on, but nothing else is on the cards.</Entry>
-    <Entry Name="EventYesFuelNoKey">It's got the fuel it needs, but it still won't run.</Entry>
-    <Entry Name="EventNoFuelYesKey">The key's in, but still no luck. What's not right?</Entry>
-    <Entry Name="EventYesFuelYesKey">I'm feeling good about my chances now, let's try out that ignition key.</Entry>
-    <Entry Name="EventPanelOff">There's no power in the control panel.</Entry>
-    <Entry Name="EventFillFuel">As my new friend might say, 'Drink you thirsty beast!'</Entry>
-    <Entry Name="DescMachine">Now that's quite a machine: it doesn't come any more industrial size than that. Those teeth at the front look pretty sharp, the whole thing just looks mean.</Entry>
-    <Entry Name="DescPanel">This must be the control station for that yellow monstrosity.</Entry>
-    <Entry Name="DescLever">And I suppose this controls the mining equipment throttle.</Entry>
-    <Entry Name="DescCable">From its size, I'd say it's a power cable.</Entry>
-    <Entry Name="DescPower">A power cabinet.</Entry>
-    <Entry Name="DescFuelIn">Clearly labelled, 'Fuel Intake'.</Entry>
-    <Entry Name="DescKeyIn">It's labelled 'Ignition', but without the key, it probably won't.</Entry>
-    <Entry Name="EventKeyInNoPower">It's not even turning over, I'm not sure there's any power to the console.</Entry>
-    <Entry Name="EventKeyInNoFuel">Even with the key, it's not too keen to ignite. There must be something wrong with the machine itself.</Entry>
-    <Entry Name="EventKeyTurned">It's strange, but hearing that digger finally running might be the most reassuring thing I've heard for a long time.</Entry>
-    <Entry Name="EventShouldPlaceKey">I don't know why I'd think this would work without the key.</Entry>
-    <Entry Name="EventKeyInNoPower">The key fit nicely, but it's of no use until the panel has some power.</Entry>
-    <Entry Name="EventKeyInNothing">It's no use.</Entry>
-    <Entry Name="EventForceGasoline">The lid on the gas can is rusted shut. I'd better have something that can get it open, or I'll be down here for a long time.</Entry>
-    <Entry Name="DescTransformer">I doubt that transformer's passed a rigorous safety check.</Entry>
-    <Entry Name="DescRubble">This doesn't look as old as some of the other damage to the mine, bits of rock occasionally come loose from the rubble.</Entry>
-    <Entry Name="EventFoundWallHole">This area must be the access point to reach further into the mine.</Entry>
+    <Entry Name="EventNoFuelNoKey">Так, сілкаванне ўключана, але на гэтым усё.</Entry>
+    <Entry Name="EventYesFuelNoKey">Неабходнае паліва ёсць, але ўсё адно не працуе.</Entry>
+    <Entry Name="EventNoFuelYesKey">Ключ устаўлены, але ніякіх вынікаў. Што не так?</Entry>
+    <Entry Name="EventYesFuelYesKey">Цяпер я веру ў свае шансы, паспрабуем гэты ключ запальвання.</Entry>
+    <Entry Name="EventPanelOff">Панэль кіравання не падсілкаваная.</Entry>
+    <Entry Name="EventFillFuel">Як сказаў бы мой новы сябар: 'Пі, галодны звер!'</Entry>
+    <Entry Name="DescMachine">Вось гэта машына: прамысловых не бывае большых памераў, чым гэта. Гэтыя зубы спераду выглядаюць даволі вострымі, цалкам выглядае проста злосна.</Entry>
+    <Entry Name="DescPanel">Гэта павінна быць станцыя кіравання гэтай жоўтай пачварышчай.</Entry>
+    <Entry Name="DescLever">А гэта, мяркую, кантралюе дросель горназдабыўнога абсталявання.</Entry>
+    <Entry Name="DescCable">З яго памеру я б сказаў, што гэта сілавы кабель.</Entry>
+    <Entry Name="DescPower">Размеркавальны шчыт.</Entry>
+    <Entry Name="DescFuelIn">Ясна напісана: 'Паліва'.</Entry>
+    <Entry Name="DescKeyIn">Падпісана 'Запальванне', але без ключа, верагодна, нічога не атрымаецца.</Entry>
+    <Entry Name="EventKeyInNoPower">Нават не варочаецца, я не ўпэўнены, што на кансолі падаецца сілкаванне.</Entry>
+    <Entry Name="EventKeyInNoFuel">Нават з ключом яна не надта хоча заводзіцца. Мабыць нешта не так з самой машынай.</Entry>
+    <Entry Name="EventKeyTurned">Дзіўна, але гукі нарэшце працуючага капальніка магчыма самае абнадзейлівае, што я чуў на працягу доўгага часу.</Entry>
+    <Entry Name="EventShouldPlaceKey">Я не ведаю, чаму я думаю, што гэта атрымаецца без ключа.</Entry>
+    <Entry Name="EventKeyInNoPower">Ключ добра падыходзіць, але ён бескарысны, пакуль панэль не будзе мець крыху сілкавання.</Entry>
+    <Entry Name="EventKeyInNothing">Бескарысна.</Entry>
+    <Entry Name="EventForceGasoline">Вечка на каністры заржавела наглуха. Лепш мець пад рукой нешта, чым можна было б яе адкрыць, або я тут надоўга.</Entry>
+    <Entry Name="DescTransformer">Я сумняваюся, што гэты трансфарматар прайшоў строгую праверку бяспекі.</Entry>
+    <Entry Name="DescRubble">Гэта не выглядае такім старым, як некаторыя іншыя пашкоджанні шахты, кавалкі камення час ад часу адвальваюцца ад завалаў.</Entry>
+    <Entry Name="EventFoundWallHole">Гэтая зона павінна быць кропкай доступу, каб прайсці далей у шахту.</Entry>
   </CATEGORY>
   <CATEGORY Name="01_11_new_storage_room">
     <Entry Name="DescHole">I... I can't possibly go back up there... with those things.</Entry>
