translate 01_08_water_cave category

--- a/Belarusian.lang
+++ b/Belarusian.lang
@@ -616,23 +616,23 @@
     <Entry Name="UseItemTooFar">I'm too far away to use it.</Entry>
   </CATEGORY>
   <CATEGORY Name="01_08_water_cave">
-    <Entry Name="EventLadderWrong">It doesn't reach.</Entry>
-    <Entry Name="EventLadderRight">For better or for worse, looks like I can climb up into the tunnel mouth. I'll need to get up pretty high to get a good grip of the ladder.</Entry>
-    <Entry Name="DescHole">There's a draft coming from that dank looking hole up there. All the same, it's hardly inviting. In fact, it's the complete opposite.</Entry>
-    <Entry Name="DescWater">It looks like some kind of excavation, although not like any mining operation I've ever seen. I don't know where that mist is coming from, but I don't fancy getting any closer to find out.</Entry>
-    <Entry Name="DescAltar">It's a big, flat plane of rock, probably used for loading. Almost looks like some kind of altar.</Entry>
-    <Entry Name="DescLamp01">Piercing white light, still not enough to illuminate the whole room.</Entry>
-    <Entry Name="DescLamp02">These lamps are much newer than the rest of the mine equipment.</Entry>
-    <Entry Name="DescStala">The rock itself looks as if it's given up on life and begun to decay, like the rest of this place.</Entry>
-    <Entry Name="DescBox01">This box should be as ancient as the rest of the mine, but it looks in better nick. The side facing that excavation seems more corroded.</Entry>
-    <Entry Name="DescBox02">All these supply crates are filled to the brim with bottled water. Why leave all this behind?</Entry>
-    <Entry Name="DescMBox">The supplies in this box look military. They can't be more than 20 years old.</Entry>
-    <Entry Name="DescLadderMain">The longer piece of this ladder's been shattered by something strong enough to rend metal in two.</Entry>
-    <Entry Name="DescLadderSec">It's the shorter piece of the fractured ladder, lying on a bed of scattered metal splinters.</Entry>
-    <Entry Name="DescHook">These rusting hooks are designed to hoist thick cables, but they'd probably hold a good deal more weight.</Entry>
-    <Entry Name="EventLookAtHole">That must be the tunnel leading to the store room. It's pretty high though...</Entry>
-    <Entry Name="DescCLight">This rudimentary lighting system should reassure me. It doesn't much.</Entry>
-    <Entry Name="DescBLight">This could have been damaged when I got the power on...</Entry>
+    <Entry Name="EventLadderWrong">Не дастае.</Entry>
+    <Entry Name="EventLadderRight">Добра гэта ці дрэнна, здаецца, што я магу падняцца да ўвахода ў тунэль. Мне трэба будзе падняцца даволі высока, каб добра схапіцца за лесвіцу.</Entry>
+    <Entry Name="DescHole">Ад той на погляд сырой дзіры ідзе скразняк. Тым не менш, гэта наўрад ці спакушае. Насамрэч, зусім наадварот.</Entry>
+    <Entry Name="DescWater">Гэта выглядае як нейкія раскопкі, хоць і не падобна на горныя работы, якія я бачыў. Не ведаю, адкуль бярэцца гэты туман, але не хачу набліжацца, каб даведацца.</Entry>
+    <Entry Name="DescAltar">Вялікі плоскі пласт камення, які, верагодна, выкарыстоўваўся для пагрузкі. Выглядае амаль як нейкі алтар.</Entry>
+    <Entry Name="DescLamp01">Пранізлівае белае святло, якога ўсё адно недастаткова, каб асвятліць увесь пакой.</Entry>
+    <Entry Name="DescLamp02">Гэтыя лямпы значна навейшыя за астатняе абсталяванне.</Entry>
+    <Entry Name="DescStala">Сама скала выглядае так, быццам яна адмовілася ад жыцця і пачала гніць як і ўсё астатняе тут.</Entry>
+    <Entry Name="DescBox01">Гэтая скрынка павінна быць такой жа старажытнай, як і астатняя частка шахты, але знаходзіцца нібы ў лепшым стане. Бок, павернуты да гэтых раскопак, здаецца больш раз'едзеным.</Entry>
+    <Entry Name="DescBox02">Усе гэтыя скрыні да краёў запоўнены вадой у бутэльках. Навошта пакідаць усё гэта?</Entry>
+    <Entry Name="DescMBox">Забеспячэнне ў гэтай скрынцы, здаецца, ваеннае. Яму не можа быць больш за 20 гадоў.</Entry>
+    <Entry Name="DescLadderMain">Даўжэйшы кавалак гэтай лесвіцы быў разбіты чымсьці дастаткова моцным, каб разарваць метал на дзве часткі.</Entry>
+    <Entry Name="DescLadderSec">Карацейшы кавалак зламанай лесвіцы, які ляжыць сярод раскіданых металічных аскепкаў.</Entry>
+    <Entry Name="DescHook">Гэты іржавыя крукі, прызначаныя для трымання тоўстага кабелю, але яны, верагодна, змогуць вытрымаць значна большую вагу.</Entry>
+    <Entry Name="EventLookAtHole">Гэта павінны быць тунэль, які вядзе на склад. Аднак ён даволі высока... </Entry>
+    <Entry Name="DescCLight">Гэтая рудыментарная сістэма асвятлення павінна супакоіць мяне. Не супакойвае.</Entry>
+    <Entry Name="DescBLight">Яна магло атрымаць пашкоджанні, калі я ўключыў электрычнасць...</Entry>
     <Entry Name="DescOfficerCap">It's singed, and the officer's insignia has begun to melt into the material. Unless that insignia's made from play dough, the heat needed to melt it should have incinerated the entire cap.</Entry>
   </CATEGORY>
   <CATEGORY Name="01_07_lead_mine_shafts">
