translate 01_11_new_storage_room category

--- a/Belarusian.lang
+++ b/Belarusian.lang
@@ -717,23 +717,23 @@
     <Entry Name="EventFoundWallHole">Гэтая зона павінна быць кропкай доступу, каб прайсці далей у шахту.</Entry>
   </CATEGORY>
   <CATEGORY Name="01_11_new_storage_room">
-    <Entry Name="DescHole">I... I can't possibly go back up there... with those things.</Entry>
-    <Entry Name="DescControlRoom">This control room must have seen a lot of use back when the mine was operational, but it looks pretty desolate now.</Entry>
-    <Entry Name="DescCrane">No reason why this mechanical arm shouldn't still be working.</Entry>
-    <Entry Name="DescPanel">An old storage locker. Once home to posters of Playmates... now just home to dust and decay.</Entry>
-    <Entry Name="DescMedic">A first aid cabinet.</Entry>
-    <Entry Name="DescVent">This must house the interior ventilation system.</Entry>
-    <Entry Name="DescLocker">The paint's pealing on this old locker, it's bound to be rusted shut.</Entry>
-    <Entry Name="EventLockedDoor">Either it's locked, or something's blocking the door. Damnit!</Entry>
-    <Entry Name="DescVentSpecial">This vent system must snake all over the storage bay. Looks like a tight squeeze, I don't fancy it unless I absolutely have to.</Entry>
-    <Entry Name="DescShelfItem">May as well be empty.</Entry>
-    <Entry Name="DescShelf">Lots of equipment, but useless.</Entry>
-    <Entry Name="PickGasCan">According to Red I just need to find a key as well. It should be somewhere around here.</Entry>
-    <Entry Name="PickMachineKey">According to Red I just need to find a can of gasoline as well. It should be somewhere around here.</Entry>
-    <Entry Name="DescWallHole">This whole installation is just falling apart.</Entry>
-    <Entry Name="DescGas">I just don't get it... how long could this have been running for?</Entry>
-    <Entry Name="DescControl">After that generator, getting this crane going shouldn't be too tricky.</Entry>
-    <Entry Name="EventFoundKeyGas">I feel certain that this key and gasoline tank is what Red was refering to.</Entry>
+    <Entry Name="DescHole">Я... Я не змагу вярнуцца туды... З гэтымі пачварамі.</Entry>
+    <Entry Name="DescControlRoom">Напэўна, гэтая дыспетчарская шмат выкарыстоўвалася, калі шахта працавала, але цяпер яна выглядае даволі запушчанай.</Entry>
+    <Entry Name="DescCrane">Няма прычын, чаму гэтая механічная рука яшчэ не павінна працаваць.</Entry>
+    <Entry Name="DescPanel">Старая шафка. Калісьці тут віселі плакаты Playmates... Цяпер тут толькі пыл і гніенне.</Entry>
+    <Entry Name="DescMedic">Шафка першай дапамогі.</Entry>
+    <Entry Name="DescVent">Гэта павінна быць ўнутраная сістэма вентыляцыі.</Entry>
+    <Entry Name="DescLocker">Фарба лушчыцца на гэтай старой шафцы, яна абавязкова цалкам пакрыецца іржой.</Entry>
+    <Entry Name="EventLockedDoor">Альбо зачынена, альбо нешта блакуе дзверы. Халера!</Entry>
+    <Entry Name="DescVentSpecial">Гэтая вентыляцыйная сістэма павінна праходзіць праз усё складское памяшканне. Выглядае вельмі цеснай, я б туды не палез, пакуль ёсць іншы шлях.</Entry>
+    <Entry Name="DescShelfItem">Амаль што пустыя.</Entry>
+    <Entry Name="DescShelf">Шмат абсталявання, але бескарыснага.</Entry>
+    <Entry Name="PickGasCan">Па словах Рэда, мне таксама трэба знайсці ключ. Ён павінны быць дзесьці тут.</Entry>
+    <Entry Name="PickMachineKey">Па словах Рэда, мне проста трэба знайсці каністру бензіну. Яна павінна быць дзесьці тут.</Entry>
+    <Entry Name="DescWallHole">Уся гэтая ўстаноўка проста развальваецца.</Entry>
+    <Entry Name="DescGas">Я проста не разумею... Як доўга яна можа ісці?</Entry>
+    <Entry Name="DescControl">Пасля таго генератара, заставіць гэты кран працаваць павінна быць не занадта складана.</Entry>
+    <Entry Name="EventFoundKeyGas">Я ўпэўнены, што на гэтыя ключ і каністру бензіну спасылаўся Рэд.</Entry>
   </CATEGORY>
   <CATEGORY Name="01_12_water_cave_tunnels">
     <Entry Name="DescRemains">Угх... Спадзяваюся, што гэта зрабіла жывёла, але ў мяне ёсць свае падазрэнні. Трэба сыходзіць адсюль.</Entry>
